# unima-vehicle-listing-api

./: Cargo.toml  README.md
src/: main.rs
src/models/: vehicle.rs
src/routes/: api.rs  router.rs
