[package]
name = "car-listing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
futures = "0.3.28"
mongodb = "2.7.0"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[dependecies.mongodb]
version = "2.7.0"
default-features = false
features = ["async-std-runtime"]
tokio = { version = "1.33.0", features = ["full"] }
